--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -1,1 +1,5 @@
+/* ==========================================================================
+   CUSTOM CSS
+   ========================================================================== */
+
 updates {display:none}
