--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -18,13 +18,12 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h2>Quick Updates</h2>
+    <h2><span class="covid-alert">🔔</span> Quick Updates <span class="cuUpdated"></span></h2>
     <ul class="CovidUpdates">
         <li><span class="cuLabel">Total cases: </span><span class="cuCases"></span></li>
         <li><span class="cuLabel">Dead: </span><span class="cuDead"></span></li>
         <li><span class="cuLabel">Recovered: </span><span class="cuRecovered"></span></li>
     </ul>
-    <span class="cuUpdated"></span>
     </updates>
     <h2>What you need to know:</h2>
     </div>
