--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -3,3 +3,58 @@
    ========================================================================== */
 
 updates {display:none}
+updates h2 {
+    display: inline-block;
+}
+.CovidUpdates {
+    margin: 0 auto;
+    padding: 2px 0;
+    width: 100%;
+    display: flex;
+}
+.CovidUpdates li {
+    border-radius: 8px;
+    -webkit-border-radius:8px;
+    -moz-border-radius:8px;
+    border: 4px solid;
+    padding: 14px 12px;
+    margin: 0 1%;
+    display: inline-grid;
+    vertical-align: middle;
+    list-style: none;
+    text-align: center;
+    width: 31.33%;
+}
+
+.CovidUpdates li:nth-child(1) {
+    color: #fff;
+    border-color: #111;
+    background: #222
+}
+.CovidUpdates li:nth-child(2) {
+    border-color: #990000;
+    color: #fff;
+    background: #AA0000;
+}
+.CovidUpdates li:nth-child(3) {
+    background: #007700;
+    color: #fff;
+    border-color: #006600;
+}
+.cuLabel {
+    border-bottom: 1px solid rgba(255,255,255,.1);
+    padding-bottom: 4px;
+    font-size: smaller;
+    text-transform: uppercase;
+    font-weight: 100;
+}
+.cuCases, .cuDead, .cuRecovered {
+    font-weight: 700;
+    font-size: xx-large;
+}
+.cuUpdated {
+    
+}
+.cuSource {
+    font-size:smaller
+}
