--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -18,7 +18,8 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h2><span class="covid-alert">🔔</span> Global Cases (<span class="cuUpdated"></span>) <span class="cuSource"><a href="https://worldometers.info/coronavirus" target="_blank">[source]</a></span></h2>
+    <h2><span class="covid-alert">🔔</span> #COVID-19 Updates</h2>
+    <subtitle><span class="cuUpdated"></span><span class="cuSource"><a href="https://worldometers.info/coronavirus" target="_blank">[source]</a></span></subtitle>
     <ul class="CovidUpdates">
         <li><span class="cuLabel">Total cases: </span><span class="cuCases"></span></li>
         <li><span class="cuLabel">Dead: </span><span class="cuDead"></span></li>
