--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -7,7 +7,12 @@ updates h2 {
     display: block;
 }
 updates subtitle {
-    display:block;
+    font-style: italic;
+    left: 50px;
+    top: -4px;
+    position: relative;
+    font-size: small;
+    display: block;
 }
 .CovidUpdates {
     margin: 0 auto;
