--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -2,14 +2,17 @@
    CUSTOM CSS
    ========================================================================== */
 
-updates {display:none}
+updates {
+    display:none;
+    padding-top:20px;
+    }
 updates h2 {
     display: block;
 }
 updates subtitle {
     font-style: italic;
     left: 50px;
-    top: -4px;
+    top: -6px;
     position: relative;
     font-size: small;
     display: block;
