--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -15,7 +15,7 @@ updates subtitle {
     top: -6px;
     position: relative;
     font-size: small;
-    display: block;
+    display: inline-block;
 }
 .CovidUpdates {
     margin: 0 auto;
