--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -21,11 +21,15 @@ updates subtitle {
     }
 }
 .CovidUpdates {
+    box-shadow: 0 0 24px rgba(0,0,0,.35) inset;
+    background: #eee;
     margin: 0 auto;
-    padding: 2px 0;
+    padding: 8px 4px;
     width: 100%;
     display: flex;
+    border-radius: 8px;
     @include breakpoint($mobile-max) {
+        padding:4px;
         display:grid;
       }
 }
