--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -18,7 +18,7 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h1><span class="covid-alert">🔔</span> #COVID-19 Updates</h1>
+    <h1><span class="covid-alert">🔔</span>&nbsp;COVID-19 Updates</h1>
     <subtitle><span class="cuUpdated"></span><span class="cuSource">&nbsp;<a href="https://worldometers.info/coronavirus" target="_blank" title="worldometers.info/coronavirus">[source]</a></span></subtitle>
     <ul class="CovidUpdates">
         <li><span class="cuLabel">Total cases: </span><span class="cuCases"></span></li>
