--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -75,7 +75,8 @@ updates subtitle {
 }
 .cuCases, .cuDead, .cuRecovered {
     font-weight: 700;
-    font-size: xx-large;
+    font-size: 50px;
+    text-shadow: 2px 2px 0 rgba(0,0,0,.15);
 }
 .cuSource {
     font-weight:bold;
