--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -26,6 +26,7 @@
         <li><span class="cuLabel">Recovered: </span><span class="cuRecovered"></span></li>
     </ul>
     </updates>
+    <section class="cuInstructions">
     <h2>What you need to do:</h2>
     <h2 class="translated">Unachotakiwa kufanya:</h2>
     <h3 class="h-indent"><span class="emoji">🧼</span>Wash your hands frequently</h3>
@@ -49,6 +50,7 @@
     <h3 class="h-indent"><span class="emoji">ℹ️</span>Stay aware of the latest information from WHO and your local authorities</h3>
     <h3 class="translated">Fuatilia taarifa mpya zinazotolewa na Shirika la Afya Duniani (WHO) na mamlaka husika karibu nawe</h3>
     <p></p>
+    </section>
     </div>
     </div>
 
