--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -100,7 +100,7 @@ updates subtitle {
     text-align: center;
     padding: 8px;
     width: 40px;
-    display: inline-block;
+    display: inline;
 }
 .h-indent {
     text-indent: -48px;
