--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -88,19 +88,22 @@ updates subtitle {
     margin: 0;
     color: #006600;
     font-size: smaller;
-    padding-top: 5px;
+    padding-top: 8px;
 }
 .emoji {
-    vertical-align: middle;
+    left: -48px;
+    position: relative;
+    box-shadow: 0 0 5px rgba(0,0,0,.25) inset;
+    text-indent: 0;
     font-size: 16px;
     height: 40px;
     border-radius: 50px;
     background: #eee;
-    margin-right: 8px;
     text-align: center;
     padding: 8px;
     width: 40px;
-    display: inline;
+    display: block;
+    margin-bottom: -40px;
 }
 .h-indent {
     text-indent: -48px;
