--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -82,12 +82,11 @@ updates subtitle {
     font-weight:bold;
 }
 .translated {
-    border-top: 1px solid rgba(0,90,0,.2);
+    border-top: 1px solid rgba(0,90,0,0.2);
     font-style: italic;
-    padding-left: 40px;
-    margin: 0;
+    margin-left: 40px;
+    margin-top: 0;
     color: #006600;
-    font-size: smaller;
     padding-top: 8px;
 }
 .emoji {
