--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -28,7 +28,7 @@
     </updates>
     <section class="cuInstructions">
     <h2>What you need to do:</h2>
-    <h2 class="translated">Unachotakiwa kufanya:</h2>
+    <h2 class="translated no-indent">Unachotakiwa kufanya:</h2>
     <h3 class="h-indent"><span class="emoji">🧼</span>Wash your hands frequently</h3>
     <h3 class="translated">Nawa mikono mara kwa mara</h3>
     <p></p>
