--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -84,13 +84,13 @@ updates subtitle {
 .translated {
     border-top: 1px solid rgba(0,90,0,0.2);
     font-style: italic;
-    margin-left: 40px;
+    margin-left: 60px;
     margin-top: 0;
     color: #006600;
     padding-top: 8px;
 }
 .emoji {
-    left: -48px;
+    left: -52px;
     position: relative;
     box-shadow: 0 0 5px rgba(0,0,0,.25) inset;
     text-indent: 0;
@@ -105,6 +105,8 @@ updates subtitle {
     margin-bottom: -40px;
 }
 .h-indent {
-    text-indent: -48px;
-    padding-left: 35px;
+    padding-left: 56px;
+}
+.no-indent {
+    margin-left: 0;
 }
