--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -4,6 +4,8 @@
 
 updates {
     display:none;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
     padding-top:20px;
     }
 updates h2 {
@@ -109,4 +111,20 @@ updates subtitle {
 }
 .no-indent {
     margin-left: 0;
+}
+.loader {
+    margin-top: 40px;
+    font-size: 28px;
+    display: block;
+    text-align: center;
+    padding: 24px 0px;
+}
+.show {
+    opacity: 1;
+    transition-delay: 0.5s;
+    transition: opacity 0.5s ease-in-out;
+}
+.loaded {
+    opacity:0;
+    transition: opacity 0.5s ease-in-out;
 }
