--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -129,6 +129,7 @@ updates subtitle {
     transition: opacity 0.5s ease-in-out;
 }
 .scrollbutton {
+    display:none;
     position:fixed;
     bottom: 10px;
     right:10px;
