--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -129,10 +129,18 @@ updates subtitle {
     transition: opacity 0.5s ease-in-out;
 }
 .scrollbutton {
-    display:none;
-    position:fixed;
-    bottom: 10px;
-    right:10px;
-    width:60px;
-    height:60px;
+    box-shadow: 0 0 12px rgba(0,0,0,.2);
+    padding: 2px;
+    line-height: 0;
+    background: rgba(0,0,0,.5);
+    color: #fff;
+    cursor: pointer;
+    font-size: 56px;
+    display: none;
+    position: fixed;
+    bottom: 8px;
+    right: 8px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
 }
