--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -147,3 +147,9 @@ updates subtitle {
 .scrollbutton:hover {
     background: rgba(50,50,50,.5);
 }
+
+.greedy-nav a {color:#fff!important}
+.greedy-nav {background: transparent!important}
+.masthead {
+    background: #222;
+}
