--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -143,6 +143,7 @@ updates subtitle {
     width: 60px;
     height: 60px;
     border-radius: 50px;
+    z-index:99;
 }
 .scrollbutton:hover {
     background: rgba(50,50,50,.5);
