--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -32,7 +32,7 @@
     <h3 class="translated">Nawa mikono mara kwa mara</h3>
     <p></p>
     <h3 class="h-indent"><span class="emoji">👄</span>Avoid touching your eyes, mouth and nose</h3>
-    <h3 class="translated">Jizuie kugusa macho, mdomo na pua</h3>
+    <h3 class="translated">Usishike macho, mdomo na pua</h3>
     <p></p>
     <h3 class="h-indent"><span class="emoji">💪</span>Cover your mouth and nose with your bent elbow or tissue when you cough or sneeze</h3>
     <h3 class="translated">Ziba mdomo wako na pua kwa mkono uliokunjwa au tishu unapokohoa au kupiga chafya</h3>
