--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -26,7 +26,7 @@
     </updates>
     <div class="loader">FETCHING DATA &nbsp; <i class="fas fa-cog fa-spin"></i></div>
     <section class="cuInstructions">
-    <h2>What you need to do:</h2><span class="lang">SHOW SWAHILI</span>
+    <h2>What you need to do: <span class="lang">SHOW SWAHILI</span></h2>
     <h2 class="translated no-indent swahili">Unachotakiwa kufanya:</h2>
     <h3 class="h-indent"><span class="emoji">🧼</span>Wash your hands frequently</h3>
     <h3 class="translated swahili">Nawa mikono mara kwa mara</h3>
