--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -86,6 +86,7 @@
                     $('.swahili').fadeIn();
                 } else {
                     $('.swahili').fadeOut();
+                    $('.lang').html("HIDE SWAHILI");
                 }
 
             });
