--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -166,5 +166,6 @@ updates subtitle {
     background: #555;
     color:#fff;
     cursor:pointer;
+    font-weight: 100;
 }
 .lang:hover {background: #666}
