--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -99,6 +99,7 @@
                     switchLang(true);
                 } else {
                     $('.swahili').fadeOut();
+                    $('.lang').html("SHOW SWAHILI");
                     switchLang(false);                   
                 }
 
