--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -101,7 +101,7 @@
                     switchLang(true);
                 } else {
                     $('.swahili').fadeOut();
-                    ('.english').fadeIn();
+                    $('.english').fadeIn();
                     $('.lang').html("SHOW IN SWAHILI");
                     switchLang(false);                   
                 }
