--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -25,7 +25,7 @@
     </ul>
     </updates>
     <div class="loader">FETCHING DATA &nbsp; <i class="fas fa-cog fa-spin"></i></div>
-    <div class="toggleLang"><span class="lang">KISWAHILI</span></div>
+    <div class="toggleLang"><i class="fas fa-globe-africa"></i>&nbsp;<span class="lang">KISWAHILI</span></div>
     <section class="cuInstructions">
     <h2 class="english">What you need to do:</h2>
     <h2 class="swahili">Unachotakiwa kufanya:</h2>
