--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -163,7 +163,7 @@ updates subtitle {
     text-align: center;
     display: inline-block;
     margin: 0 auto;
-    font-size: smaller;
+    font-size: larger;
     padding: 2px 8px 4px 8px;
     border-radius: 6px;
     background: #555;
