--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -160,11 +160,12 @@ updates subtitle {
 }
 .swahili {display:none;}
 .lang {
+    border-bottom: 4px solid #333;
     text-align: center;
     display: inline-block;
     margin: 0 auto;
     font-size: larger;
-    padding: 2px 8px 4px 8px;
+    padding: 2px 14px 4px 14px;
     border-radius: 6px;
     background: #555;
     color: #fff;
