--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -52,6 +52,9 @@ updates subtitle {
         margin:1%;
       }
 }
+.CovidUpdates li:hover {
+    opacity: .9;
+}
 
 .CovidUpdates li:nth-child(1) {
     color: #fff;
