--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -69,14 +69,16 @@
     <script>
         var cases = "https://thedextazlab.herokuapp.com/users/1/web_requests/79/covid19.json";
         function fetchDATA (){
+            $('updates').removeClass("show");
+            $('.loader').removeClass("loaded");
             $.getJSON(cases, function(data) {
                     $('.cuCases').html(data.items[0].cases);
                     $('.cuDead').html(data.items[0].dead);
                     $('.cuRecovered').html(data.items[0].recovered);
                     $('.cuUpdated').html(data.items[0].updated);
-                    $('.loader').toggleClass("loaded").delay(500).hide();
+                    $('.loader').addClass("loaded");
                     $('updates').show();
-                    $('updates').toggleClass("show");
+                    $('updates').addClass("show");
 
             });
         }
