--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -74,9 +74,9 @@ updates subtitle {
 .cuLabel {
     border-bottom: 1px solid rgba(255,255,255,.1);
     padding-bottom: 4px;
-    font-size: smaller;
+    font-size: 20px;
     text-transform: uppercase;
-    font-weight: 100;
+    font-weight: normal;
 }
 .cuCases, .cuDead, .cuRecovered {
     font-weight: 700;
