--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -69,6 +69,7 @@
     <script>
         var cases = "https://thedextazlab.herokuapp.com/users/1/web_requests/79/covid19.json";
         function fetchDATA (){
+            $('updates').delay(1000).hide();
             $('updates').removeClass("show");
             $('.loader').removeClass("loaded");
             $.getJSON(cases, function(data) {
@@ -78,7 +79,7 @@
                     $('.cuUpdated').html(data.items[0].updated);
                     $('.loader').addClass("loaded");
                     $('updates').show();
-                    $('updates').addClass("show");
+                    $('updates').delay(1000).addClass("show");
 
             });
         }
