--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -86,8 +86,8 @@
                     }, 1000);      
             });
         }
-        function switchLang(bool) {
-            if (bool == true) {
+        function switchLang(sw) {
+            if (sw == true) {
                 $('.CovidUpdates > li:nth-child(1) .cuLabel').html("JUMLA YA WAGONJWA:");
                 $('.CovidUpdates > li:nth-child(2) .cuLabel').html("WALIOKUFA:");
                 $('.CovidUpdates > li:nth-child(3) .cuLabel').html("WALIOPONA:");
