--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -16,7 +16,12 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h1><span class="covid-alert">🔔</span>&nbsp;COVID-19 Updates</h1>
+    <h1><span class="covid-alert">🔔</span>&nbsp;COVID-19 Updates<span class="refresher">
+        <i class="fa-stack fa-2x">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-sync fa-stack-1x fa-inverse"></i></i>
+        </span>
+    </h1>
     <subtitle><span class="cuUpdated"></span><span class="cuSource">&nbsp;<a href="https://worldometers.info/coronavirus" target="_blank" title="worldometers.info/coronavirus">[source]</a></span></subtitle>
     <ul class="CovidUpdates">
         <li><span class="cuLabel">Total cases: </span><span class="cuCases"></span></li>
@@ -111,6 +116,7 @@
                 }
 
             });
+            $('.refresher').click(function() {fetchDATA();});
         });
     </script>
     {% include scripts.html %}
