--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -16,7 +16,10 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h1><span class="covid-alert">🔔</span>&nbsp;COVID-19 Updates<span class="refresher">
+    <h1><span class="covid-alert">🔔</span>&nbsp;
+        <span class="english">COVID-19 Updates</span>
+        <span class="swahili">Taarifa za COVID-19</span>
+        <span class="refresher">
         <i class="fa-stack fa-2x">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fas fa-sync fa-stack-1x fa-inverse"></i></i>
